<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/id_produk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_produk" />
    
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama" />
    
    <EditText
        android:id="@+id/jenis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jenis" />
    
    <EditText
        android:id="@+id/harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/harga" />
    
    <EditText
        android:id="@+id/persediaan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/persediaan" />
    
    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>